@@ -7,7 +7,7 @@ VERSION: 1.4.0
 AUTHORS:
     
     Monte Ohrt <monte@ispi.net>
-    Andrei Zmievski <andrei@ispi.net>
+    Andrei Zmievski <andrei@php.net>
 
 
 MAILING LIST:
